--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.0.7
   #flutter_login_facebook: ^1.1.0
+  twitter_login: ^4.0.1
   #firebase_auth: ^3.1.1
   #firebase_core: ^1.6.0
   
