--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.0.7
-  #flutter_login_facebook: ^1.1.0
+  flutter_login_facebook: ^1.1.0
   twitter_login: ^4.0.1
   #firebase_auth: ^3.1.1
   #firebase_core: ^1.6.0
