--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_sign_in: ^5.0.7
-  #flutter_login_facebook: ^1.1.0
+  flutter_auth_ui: ^2.4.0
   #firebase_auth: ^3.1.1
   #firebase_core: ^1.6.0
   
